# public/doc/swagger.json
@@ -270,6 +270,44 @@
                 ]
             }
         },
+        "/demands/done": {
+            "post": {
+                "tags": [
+                    "demand"
+                ],
+                "summary": "Done demand",
+                "description": "",
+                "operationId": "doneDemands",
+                "parameters": [
+                    {
+                        "name": "Demand",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/StatusDemandRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "successful operation"
+                    },
+                    "404": {
+                        "$ref": "#/responses/NotFoundResponse"
+                    },
+                    "401": {
+                        "$ref": "#/responses/NotAuthResponse"
+                    },
+                    "default": {
+                        "$ref": "#/responses/DefaultErrorResponse"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
+            }
+        },
         "/demands/cancel": {
             "post": {
                 "tags": [
